src/objects/Model__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Models</relationshipLabel>
        <relationshipName>Models</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Car__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Car</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Motorbike__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Motorbike</label>
        <type>Checkbox</type>
    </fields>
    <label>Model</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Car__c</columns>
        <columns>Motorbike__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Models</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>